--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         "laravel/jetstream": "^3.1",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "tightenco/ziggy": "^1.0",
-        "laravel/nova": "*"
+        "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
