--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:oEgyZ0A07N3ItcnD98k2Ni+9TTWllIZIwjw3RjBKlSQ=
 APP_DEBUG=true
 APP_URL=http://localhost
 
